infrastructure/monitoring/global-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: flux-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
